Fix affichage photo

--- a/index.html
+++ b/index.html
@@ -267,8 +267,9 @@
 
         <aside class="card" aria-label="Photo et réseaux">
             <div class="photo">
-                <img src="/home/user-20-c1/fc55b189-6791-4ae2-ac83-5fac81e0426b.jpeg" alt="Kamey Tshinyam Parfait"
-                    style="width:100%;height:100%;object-fit:cover;border-radius:12px" />
+                <img src="./profil.jpeg" alt="Photo de profil">
+
+                style="width:100%;height:100%;object-fit:cover;border-radius:12px" />
             </div>
 
 
