--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Kamey Tshinyam Parfait — Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
     <style>
         :root {
             --bg: #0f1724;
