Fix image structure and styling

--- a/index.html
+++ b/index.html
@@ -269,10 +269,9 @@
 
         <aside class="card" aria-label="Photo et réseaux">
             <div class="photo">
-                <img src="./profil.jpeg" alt="Photo de profil">
-
-                style="width:100%;height:100%;object-fit:cover;border-radius:12px" />
+                <img src="./profil.jpeg" alt="Photo de profil" class="photo-img">
             </div>
+
 
 
             <div style="margin-top:14px">
