Fix broken omepage butons

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <a href="/Mon-Portofolio/">Accueil</a>
                 <a href="/Mon-Portofolio/cv.html">CV</a>
                 <a href="/Mon-Portofolio/projet.html">Projets</a>
-                <a href="/Mon-Portofolio/contact.html">Contact</a>
+                <a href="/Moon-Portofolio/contact.html">Contact</a>
             </nav>
 
         </header>
@@ -262,9 +262,11 @@
             <div style="margin-top:18px;">
                 <div class="quick">
                     <a class="btn" href="cv.html">Voir mon CV</a>
-                    <a class="btn" href="projets.html">Projets</a>
-                    <a class="btn" href="contacts.html">Me contacter</a>
+                    <a class="btn" href="projet.html">Projets</a>
+                    <a class="btn" href="contact.html">Me contacter</a>
                 </div>
+            </div>
+
             </div>
         </section>
 
