Fix absolute URLs for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -261,11 +261,12 @@
 
             <div style="margin-top:18px;">
                 <div class="quick">
-                    <a class="btn" href="cv.html">Voir mon CV</a>
-                    <a class="btn" href="projet.html">Projets</a>
-                    <a class="btn" href="contact.html">Me contacter</a>
+                    <a class="btn" href="/Mon-Portofolio/cv.html">Voir mon CV</a>
+                    <a class="btn" href="/Mon-Portofolio/projet.html">Projets</a>
+                    <a class="btn" href="/Mon-Portofolio/contact.html">Me contacter</a>
                 </div>
             </div>
+
 
             </div>
         </section>
