Fix navar links for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <a href="/Mon-Portofolio/">Accueil</a>
                 <a href="/Mon-Portofolio/cv.html">CV</a>
                 <a href="/Mon-Portofolio/projet.html">Projets</a>
-                <a href="/Moon-Portofolio/contact.html">Contact</a>
+                <a href="/Mon-Portofolio/contact.html">Contact</a>
             </nav>
 
         </header>
