--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
             </div>
 
             <nav aria-label="Navigation principale">
-                <a href="/Mon-Portofolio/">Accueil</a>
-                <a href="/Mon-Portofolio/cv.html">CV</a>
-                <a href="/Mon-Portofolio/projet.html">Projets</a>
-                <a href="/Mon-Portofolio/contact.html">Contact</a>
+                <a href="index.html">Accueil</a>
+                <a href="cv.html">CV</a>
+                <a href="projet.html">Projets</a>
+                <a href="contact.html">Contact</a>
             </nav>
 
         </header>
