Ajout des liens réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
             <div style="margin-top:14px">
                 <div style="font-weight:700">Me suivre</div>
                 <div class="socials">
-                    <a href="https://x.com/" target="_blank" rel="noopener noreferrer" aria-label="X (Twitter)">X</a>
+                    <a href="https://x.com/KameyParfa27596?t=TW4e1vmAdG98GqiRmqD7cg&s=09" target="_blank"
+                        rel="noopener noreferrer" aria-label="X (Twitter)">X</a>
                     <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer"
                         aria-label="Instagram">IG</a>
                     <a href="https://linkedin.com/" target="_blank" rel="noopener noreferrer"
