Ajout réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -283,9 +283,10 @@
                 <div class="socials">
                     <a href="https://x.com/KameyParfa27596?t=TW4e1vmAdG98GqiRmqD7cg&s=09" target="_blank"
                         rel="noopener noreferrer" aria-label="X (Twitter)">X</a>
-                    <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer"
-                        aria-label="Instagram">IG</a>
-                    <a href="https://linkedin.com/" target="_blank" rel="noopener noreferrer"
+                    <a href="https://www.instagram.com/parfaitkamey?igsh=NDB6djRjdHphZm14" target="_blank"
+                        rel="noopener noreferrer" aria-label="Instagram">IG</a>
+                    <a href="https://www.linkedin.com/in/parfait-kamey-5a0240247?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                        target="_blank" rel="noopener noreferrer" <a href="" target="_blank" rel="noopener noreferrer"
                         aria-label="LinkedIn">in</a>
                     <a href="https://youtube.com/" target="_blank" rel="noopener noreferrer" aria-label="YouTube">YT</a>
                 </div>
