Ajout contenu CV et Projets

--- a/cv.html
+++ b/cv.html
@@ -133,3 +133,30 @@
 </body>
 
 </html>
+
+<h1>Mon CV</h1>
+
+<section>
+    <h2>Profil</h2>
+    <p>Développeur Web débutant passionné par le design, le développement et l'apprentissage continu.</p>
+</section>
+
+<section>
+    <h2>Compétences</h2>
+    <ul>
+        <li>HTML / CSS</li>
+        <li>Git & GitHub</li>
+        <li>Responsive design</li>
+        <li>Linux / Terminal</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Expérience</h2>
+    <p>Pas d’expérience professionnelle encore — mais en construction 💪</p>
+</section>
+
+<section>
+    <h2>Formation</h2>
+    <p>Autoformation en développement web.</p>
+</section>
