Clean and reorganize global CSS

--- a/cv.html
+++ b/cv.html
@@ -11,11 +11,11 @@
             --bg: #071026;
             --muted: #9aa4b2;
             --accent: #7c5cff;
-            --card: #081626
+            --card: #081626;
         }
 
         * {
-            box-sizing: border-box
+            box-sizing: border-box;
         }
 
         body {
@@ -25,40 +25,40 @@
             color: #eaf3ff;
             padding: 28px;
             display: flex;
-            justify-content: center
+            justify-content: center;
         }
 
         .wrap {
             width: 100%;
-            max-width: 900px
+            max-width: 900px;
         }
 
         header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 20px
+            margin-bottom: 20px;
         }
 
         a {
             color: var(--muted);
             text-decoration: none;
-            font-weight: 600
+            font-weight: 600;
         }
 
         .content {
             background: linear-gradient(180deg, rgba(255, 255, 255, 0.02), transparent);
             padding: 22px;
             border-radius: 12px;
-            box-shadow: 0 12px 40px rgba(2, 6, 23, 0.6)
+            box-shadow: 0 12px 40px rgba(2, 6, 23, 0.6);
         }
 
         h1 {
-            margin: 0 0 6px 0
+            margin: 0 0 6px 0;
         }
 
         p.sub {
-            color: var(--muted)
+            color: var(--muted);
         }
 
         .placeholder {
@@ -67,20 +67,21 @@
             place-items: center;
             color: var(--muted);
             border: 2px dashed rgba(255, 255, 255, 0.03);
-            border-radius: 10px
+            border-radius: 10px;
         }
 
         .back {
             margin-top: 16px;
-            display: inline-block
+            display: inline-block;
         }
 
         @media (max-width:560px) {
             .content {
-                padding: 16px
+                padding: 14px;
             }
         }
     </style>
+
 </head>
 
 <body>
