Fix affichage photo et organisation pages

--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="wrap">
+    <div class="cv">
         <nav>
             <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
             <div class="menu">
@@ -22,10 +22,11 @@
         </nav>
 
         <div class="header-card">
-            <div class="photo"><img src="profil.jpeg" alt="Photo de Kamey"></div>
+
             <div class="header-info">
                 <h1>Kamey Tshinyam Parfait</h1>
                 <p>Développeur Web — tshinyamp8@gmail.com — +243 854772265</p>
+
                 <div class="socials">
                     <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
                     <a href="https://www.instagram.com" target="_blank">Instagram</a>
