--- a/projet.html
+++ b/projet.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="wrap">
+    <div class="project">
         <nav>
             <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
             <div class="menu">
@@ -22,7 +22,7 @@
         </nav>
 
         <header class="header-card">
-            <div class="photo"><img src="profil.jpeg" alt="Photo de Kamey"></div>
+
             <div class="header-info">
                 <h1>Mes Projets</h1>
                 <p>Quelques réalisations et idées en cours.</p>
