--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="wrap">
+    <div class="home">
         <nav>
             <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
             <div class="menu">
@@ -22,7 +22,7 @@
         </nav>
 
         <header class="header-card">
-            <div class="photo"><img src="profil.jpeg" alt="Photo de Kamey"></div>
+
             <div class="header-info">
                 <h1>Kamey Tshinyam Parfait</h1>
                 <p>Développeur Web — Création de sites modernes et responsive</p>
