--- a/index.html
+++ b/index.html
@@ -9,63 +9,62 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="home">
-        <nav>
-            <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
-            <div class="menu">
-                <a href="index.html">Accueil</a>
-                <a href="cv.html">CV</a>
-                <a href="projet.html">Projets</a>
-                <a href="contact.html">Contact</a>
+<body class="home">
+    <nav>
+        <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
+        <div class="menu">
+            <a href="index.html">Accueil</a>
+            <a href="cv.html">CV</a>
+            <a href="projet.html">Projets</a>
+            <a href="contact.html">Contact</a>
+    </nav>
+
+    <header class="header-info">
+    </header>
+
+    <div class="photo">
+        <img src="profil.jpeg" alt="Photo de profil" class="photo-img">
+        <h1>Kamey Tshinyam Parfait</h1>
+        <p>Développeur Web — Création de sites modernes et responsive</p>
+        <div class="socials">
+            <a href="https://twitter.com/" target="_blank">X</a>
+            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+            <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+        </div>
+    </div>
+
+    <main class="main-card">
+        <section class="section">
+            <h2>À propos</h2>
+            <p>Bonjour — je suis Kamey, développeur Web débutant passionné par le design et l'expérience
+                utilisateur. Ce portfolio présente mon CV, mes projets et mes coordonnées.</p>
+        </section>
+
+        <section class="section">
+            <h2>Projets en avant</h2>
+
+            <div class="project">
+                <h3>Portfolio personnel</h3>
+                <p>Site statique en HTML/CSS hébergé sur GitHub Pages — design glassmorphism.</p>
+                <a class="btn" href="projet.html">Voir mes projets</a>
             </div>
-        </nav>
 
-        <header class="header-card">
-
-            <div class="header-info">
-                <h1>Kamey Tshinyam Parfait</h1>
-                <p>Développeur Web — Création de sites modernes et responsive</p>
-                <div class="socials">
-                    <a href="https://twitter.com/" target="_blank">X</a>
-                    <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-                    <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
-                    <a href="https://www.youtube.com/" target="_blank">YouTube</a>
-                </div>
+            <div class="project">
+                <h3>Projet à venir</h3>
+                <p>Description bientôt disponible.</p>
             </div>
-        </header>
+        </section>
 
-        <main class="main-card">
-            <section class="section">
-                <h2>À propos</h2>
-                <p>Bonjour — je suis Kamey, développeur Web débutant passionné par le design et l'expérience
-                    utilisateur. Ce portfolio présente mon CV, mes projets et mes coordonnées.</p>
-            </section>
+        <section class="section">
+            <h2>Contact rapide</h2>
+            <p>Email : <a href="mailto:tshinyamp8@gmail.com">tshinyamp8@gmail.com</a></p>
+            <p>Téléphone : +243 854772265</p>
+            <a class="btn" href="contact.html">Me contacter</a>
+        </section>
+    </main>
 
-            <section class="section">
-                <h2>Projets en avant</h2>
-
-                <div class="project">
-                    <h3>Portfolio personnel</h3>
-                    <p>Site statique en HTML/CSS hébergé sur GitHub Pages — design glassmorphism.</p>
-                    <a class="btn" href="projet.html">Voir mes projets</a>
-                </div>
-
-                <div class="project">
-                    <h3>Projet à venir</h3>
-                    <p>Description bientôt disponible.</p>
-                </div>
-            </section>
-
-            <section class="section">
-                <h2>Contact rapide</h2>
-                <p>Email : <a href="mailto:tshinyamp8@gmail.com">tshinyamp8@gmail.com</a></p>
-                <p>Téléphone : +243 854772265</p>
-                <a class="btn" href="contact.html">Me contacter</a>
-            </section>
-        </main>
-
-        <footer>© 2025 — Kamey Tshinyam Parfait</footer>
+    <footer>© 2025 — Kamey Tshinyam Parfait</footer>
     </div>
 </body>
 
