Style refactor et layout fix

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body class="home">
+
+    <!-- Navigation -->
     <nav>
         <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
         <div class="menu">
@@ -17,10 +19,11 @@
             <a href="cv.html">CV</a>
             <a href="projet.html">Projets</a>
             <a href="contact.html">Contact</a>
+        </div>
     </nav>
 
+    <!-- Header -->
     <header class="header-info">
-
         <div class="photo">
             <img src="profil.jpeg" alt="Photo de profil" class="photo-img">
         </div>
@@ -34,42 +37,43 @@
             <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
             <a href="https://www.youtube.com/" target="_blank">YouTube</a>
         </div>
+    </header>
 
-        <main class="main-card">
+    <!-- Contenu principal -->
+    <main class="main-card">
 
+        <section class="section">
+            <h2>À propos</h2>
+            <p>Bonjour — je suis Kamey, développeur Web débutant passionné par le design et l'expérience
+                utilisateur. Ce portfolio présente mon CV, mes projets et mes coordonnées.</p>
+        </section>
 
-            <main class="main-card">
-                <section class="section">
-                    <h2>À propos</h2>
-                    <p>Bonjour — je suis Kamey, développeur Web débutant passionné par le design et l'expérience
-                        utilisateur. Ce portfolio présente mon CV, mes projets et mes coordonnées.</p>
-                </section>
+        <section class="section">
+            <h2>Projets en avant</h2>
 
-                <section class="section">
-                    <h2>Projets en avant</h2>
-
-                    <div class="project">
-                        <h3>Portfolio personnel</h3>
-                        <p>Site statique en HTML/CSS hébergé sur GitHub Pages — design glassmorphism.</p>
-                        <a class="btn" href="projet.html">Voir mes projets</a>
-                    </div>
-
-                    <div class="project">
-                        <h3>Projet à venir</h3>
-                        <p>Description bientôt disponible.</p>
-                    </div>
-                </section>
-
-                <section class="section">
-                    <h2>Contact rapide</h2>
-                    <p>Email : <a href="mailto:tshinyamp8@gmail.com">tshinyamp8@gmail.com</a></p>
-                    <p>Téléphone : +243 854772265</p>
-                    <a class="btn" href="contact.html">Me contacter</a>
-                </section>
-            </main>
-
-            <footer>© 2025 — Kamey Tshinyam Parfait</footer>
+            <div class="project">
+                <h3>Portfolio personnel</h3>
+                <p>Site statique en HTML/CSS hébergé sur GitHub Pages — design glassmorphism.</p>
+                <a class="btn" href="projet.html">Voir mes projets</a>
             </div>
+
+            <div class="project">
+                <h3>Projet à venir</h3>
+                <p>Description bientôt disponible.</p>
+            </div>
+        </section>
+
+        <section class="section">
+            <h2>Contact rapide</h2>
+            <p>Email : <a href="mailto:tshinyamp8@gmail.com">tshinyamp8@gmail.com</a></p>
+            <p>Téléphone : +243 854772265</p>
+            <a class="btn" href="contact.html">Me contacter</a>
+        </section>
+
+    </main>
+
+    <footer>© 2025 — Kamey Tshinyam Parfait</footer>
+
 </body>
 
 </html>
