--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
     <!-- Navigation -->
     <nav>
-        <div class="brand"><strong>Kamey Tshinyam Parfait</strong></div>
+        <div class="brand">Kamey Tshinyam Parfait</div>
         <div class="menu">
+
             <a href="index.html">Accueil</a>
             <a href="cv.html">CV</a>
             <a href="projet.html">Projets</a>
