Modification de la page d'acceil

--- a/cv.html
+++ b/cv.html
@@ -48,6 +48,7 @@
                         <li>Git & GitHub</li>
                         <li>Responsive Design</li>
                         <li>Linux / Terminal</li>
+                        <li>ingénierie de prompt</li>
                     </ul>
                 </div>
             </aside>
