--- a/index.html
+++ b/index.html
@@ -9,72 +9,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="home">
+<body>
 
-    <!-- Navigation -->
-    <nav>
-        <div class="brand">Kamey Tshinyam Parfait</div>
-        <div class="menu">
-
+    <!-- Barre de navigation -->
+    <header class="top-nav">
+        <nav>
             <a href="index.html">Accueil</a>
             <a href="cv.html">CV</a>
             <a href="projet.html">Projets</a>
             <a href="contact.html">Contact</a>
-        </div>
-    </nav>
+        </nav>
 
-    <!-- Header -->
-    <header class="header-info">
-        <div class="photo">
-            <img src="profil.jpeg" alt="Photo de profil" class="photo-img">
-        </div>
-
-        <h1>Kamey Tshinyam Parfait</h1>
-        <p class="subtitle">Développeur Web — Création de sites modernes et responsive</p>
-
-        <div class="socials">
-            <a href="https://twitter.com/" target="_blank">X</a>
-            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
-            <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+        <div class="social-top">
+            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+            <a href="https://x.com" target="_blank">X</a>
         </div>
     </header>
 
-    <!-- Contenu principal -->
-    <main class="main-card">
+    <!-- Section principale -->
+    <main class="hero">
 
-        <section class="section">
-            <h2>À propos</h2>
-            <p>Bonjour — je suis Kamey, développeur Web débutant passionné par le design et l'expérience
-                utilisateur. Ce portfolio présente mon CV, mes projets et mes coordonnées.</p>
-        </section>
+        <!-- Colonne gauche -->
+        <div class="left-panel">
+            <img src="profil.jpeg" class="profile-img" alt="Photo de profil">
 
-        <section class="section">
-            <h2>Projets en avant</h2>
+            <h1>Kamey Tshinyam Parfait</h1>
+            <p>Développeur Web — Création de sites modernes et responsive</p>
 
-            <div class="project">
-                <h3>Portfolio personnel</h3>
-                <p>Site statique en HTML/CSS hébergé sur GitHub Pages — design glassmorphism.</p>
-                <a class="btn" href="projet.html">Voir mes projets</a>
+            <div class="cta-buttons">
+                <a href="cv.html" class="btn">Voir mon CV</a>
+                <a href="projet.html" class="btn">Mes projets</a>
+                <a href="contact.html" class="btn">Me contacter</a>
             </div>
+        </div>
 
-            <div class="project">
-                <h3>Projet à venir</h3>
-                <p>Description bientôt disponible.</p>
-            </div>
-        </section>
-
-        <section class="section">
-            <h2>Contact rapide</h2>
-            <p>Email : <a href="mailto:tshinyamp8@gmail.com">tshinyamp8@gmail.com</a></p>
-            <p>Téléphone : +243 854772265</p>
-            <a class="btn" href="contact.html">Me contacter</a>
-        </section>
+        <!-- Colonne droite -->
+        <div class="right-panel">
+            <h2>Bienvenue 👋</h2>
+            <p>
+                Je suis développeur Web passionné par le design, l'expérience utilisateur
+                et la création de sites modernes. Explore mon portfolio 👇
+            </p>
+        </div>
 
     </main>
 
-    <footer>© 2025 — Kamey Tshinyam Parfait</footer>
-
 </body>
+
 
 </html>
